# Business

./: .gitattributes  .gitignore  Bảo mật trang web bán hàng lớn.txt  LAM.txt  README.md  chat.py  chat1.py
LAM/ai-agent/: DATA_COLLECTION_QUICK_START.md  HOW_TO_RUN.md  LAM_ARCHITECTURE.md  LAM_TEST_RESULTS.md  QUICK_START.md  README.md  TEST_RESULTS.md  UNDERSTANDING_FEATURES.md  demo_lam.py  demo_understanding.py  pyproject.toml  run_agent_visible.py  run_lam.py  run_type_test.py  test_agent_with_collection.py  test_desktop.py  test_footprint.py  test_lam.py  test_understanding.py  test_visual_feedback.py
LAM/ai-agent/ai_agent/: __init__.py  lam_agent.py
LAM/ai-agent/configs/: datasets.yaml  eval.yaml  policy.yaml
LAM/ai-agent/examples/: collect_training_data_example.py
LAM/ai-agent/schemas/: action.schema.json  observation.schema.json  planstep.schema.json  policy.schema.json  training_data.schema.json  ui_graph.schema.json
LAM/ai-agent/test_training_data/: training_data_262b08df-d7e0-4395-ae3d-eeb36a36d425.json  training_data_a44ba8c2-8f96-4858-8275-63cb72836081.json  training_data_c3e0b462-699e-40a5-84c6-78996c92d6a1.json
LAM/ai-agent/tools/: collect_m5.py  collect_training_data.py  smoke_m0.py
LAM/ai-agent/trajectories/: trajectory-18cf3494-3ab6-46d5-ad33-5205dd632ba6.json  trajectory-255af242-c22d-4be4-9514-ca3266925491.json  trajectory-31d5cf8c-6415-44a9-bc87-679c8aea46f8.json  trajectory-3ac81146-f60f-4a9a-85d1-dc79eaf662ea.json  trajectory-52b47976-d9c8-4883-aa8e-5af35a75fc13.json  trajectory-565a3c06-b4be-4b77-a44c-3d8f8cbf1fc2.json  (+16 more)
(+1103 files in other folders)
